# MCP---Model-Context-Protocol

./: .gitignore  .gitmodules  README.md  exceli draw MCP.excalidraw
1_Mcp_Server_Local/: main.py  pyproject.toml
3_Mcp_Client_Local/: Client_v1.py  Client_v2.py  main.py  pyproject.toml
